# betterserver

./: .gitignore  Cargo.toml  config.toml  deploy.sh  logging_config.yaml  window.slint
.cache/clangd/index/: main.cpp.3EC0D0F6DE646F77.idx  packets.cpp.6A7F1ACBE0094251.idx  packets.hpp.1786721C0160662C.idx
src/: config.rs  entity.rs  gui.rs  main.rs  map.rs  packet.rs  server.rs  state.rs  timer.rs
src/entities/: blackring.rs  creamring.rs  eggtrack.rs  exclone.rs  mod.rs  ring.rs  shard.rs  slug.rs  tailsprojectile.rs
src/maps/: hideandseek2.rs  mod.rs  ravinemist.rs
src/states/: characterselect.rs  game.rs  lobby.rs  mapvote.rs  mod.rs
