[package]
name = "disasterserver_new"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
chrono = "0.4.26"
serde = { version = "1.0", features = ["derive"] }
num-traits = "0.2"
num-derive = "0.2"
log = "0.4"
log4rs = "1"
rand = "0.8"
toml = "0.7.6"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[profile.release]
strip = true